<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentJogador"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JogadorFragment">

    <EditText
        android:id="@+id/etIdJogador"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="9dp"
        android:ems="10"
        android:hint="@string/idJogador"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/etNomeJogador"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarJogador"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloJogador" />

    <Button
        android:id="@+id/btnBuscarJogador"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="26dp"
        android:text="@string/btnBuscar"
        app:layout_constraintBottom_toBottomOf="@+id/etIdJogador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etIdJogador"
        app:layout_constraintTop_toTopOf="@+id/etIdJogador" />

    <EditText
        android:id="@+id/etNomeJogador"
        android:layout_width="359dp"
        android:layout_height="48dp"
        android:layout_marginTop="118dp"
        android:layout_marginBottom="119dp"
        android:ems="10"
        android:hint="@string/nomeJogador"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/etPesoJogador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <EditText
        android:id="@+id/etDataNascJogador"
        android:layout_width="359dp"
        android:layout_height="48dp"
        android:layout_marginTop="191dp"
        android:ems="10"
        android:hint="@string/dataNascJogador"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColorHint="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etAlturaJogador"
        android:layout_width="359dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/alturaJogador"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDataNascJogador" />

    <EditText
        android:id="@+id/etPesoJogador"
        android:layout_width="359dp"
        android:layout_height="48dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/pesoJogador"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAlturaJogador" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <Button
        android:id="@+id/btnInserirJogador"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="146dp"
        android:text="@string/btnInserir"
        app:layout_constraintBottom_toBottomOf="@+id/btnModificarJogador"
        app:layout_constraintEnd_toStartOf="@+id/btnModificarJogador"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnModificarJogador" />

    <Button
        android:id="@+id/btnModificarJogador"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="26dp"
        android:text="@string/btnModificar"
        app:layout_constraintBottom_toTopOf="@+id/btnListarJogador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnInserirJogador" />

    <Button
        android:id="@+id/btnExcluirJogador"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="24dp"
        android:text="@string/btnExcluir"
        app:layout_constraintBottom_toTopOf="@+id/tvListarJogador"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnListarJogador"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="24dp"
        android:text="@string/btnListar"
        app:layout_constraintBottom_toTopOf="@+id/tvListarJogador"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvListarJogador"
        android:layout_width="410dp"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spTimeJogador" />

    <TextView
        android:id="@+id/tvTituloJogador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/jogador"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Spinner
        android:id="@+id/spTimeJogador"
        android:layout_width="359dp"
        android:layout_height="48dp"
        android:layout_marginTop="362dp"
        android:layout_marginBottom="153dp"
        app:layout_constraintBottom_toTopOf="@+id/tvListarJogador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>